fixed spacing on header text

--- a/css/style.css
+++ b/css/style.css
@@ -240,9 +240,11 @@ article:last-child {
 }
 #header header h1 strong {
   font-weight: 600;
+  line-height: 1.5em;
 }
 #header header p {
-  font-size: 3.8em;
+  font-size: 3.6em;
+  line-height: 1.3em;
   margin-bottom: 3em;
 }
 /*********************************************************************************/
