--- a/less/fitamize.less
+++ b/less/fitamize.less
@@ -64,11 +64,13 @@
 
 				strong {
 					font-weight: 600;
+					line-height: 1.5em;
 				}
 			}
 
 			p {
-				font-size: 3.8em;
+				font-size: 3.6em;
+				line-height: 1.3em;
 				margin-bottom: 3em;
 			}
 
